--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body width="100%" height="100%">
         <h1>Hello World!</h1>
+        <img src="remote/Art/native/05/054bcc5c-e556-4598-b68c-f28ca66d54af.png" />
     </body>
 </html>
